mf glossary refactored

--- a/book/math_foundations/linalg/dot_prod.ipynb
+++ b/book/math_foundations/linalg/dot_prod.ipynb
@@ -5,8 +5,9 @@
             "id": "6c7a6615",
             "metadata": {},
             "source": [
+                "(target-dot-product)=\n",
                 "# _Dot_ product\n",
-                "Misschien wel de belangrijkste operatie in machine learning is het **_dot_** of **_inner_** product tussen 2 vectoren uit dezelfde ruimte (dus met een gelijk aantal elementen).\n",
+                "Misschien wel de belangrijkste operatie in machine learning is het **_dot_** of _inner_ product tussen 2 vectoren uit dezelfde ruimte (dus met een gelijk aantal elementen).\n",
                 "De eerste vector is daarbij een rij-vector $\\pmb{a}^T$ en de tweede een kolom-vector $\\pmb{b}$.\n",
                 "$$\n",
                 "\\begin{aligned}\n",
@@ -460,11 +461,15 @@
                 "#### Euclidische norm\n",
                 "Vectoren hebben een grootte en een richting, zoals bijvoorbeeld de versnelling van een object in de ruimte $\\pmb{a} = [a_x a_y a_z]^T$.\n",
                 "Vaak willen we de grootte uitdrukken in een scalaire waarde. Dat doen we aan de hand van een **norm-functie $L^p$** die gedefiniëerd is als:\n",
+                "\n",
                 "$$\n",
                 "||\\pmb{x}||_p = \\begin{pmatrix}\\sum_{i}|x_i|^p\\end{pmatrix}^{\\frac{1}{p}}\n",
                 "$$\n",
+                "\n",
+                "(target-norm)=\n",
                 "**De norm van een vector in een bepaalde ruimte drukt de afstand uit tussen de oorsprong en het punt waar de vector betrekking op heeft**.\n",
-                "In een _Euclidische_ ruimte wordt die afstand gegeven door de $L^2$ norm. De $L^2$ norm van een vector bekomt men door het dot product te nemen van de vector met zichzelf:  \n",
+                "(target-euclidean-norm)=\n",
+                "In een **_Euclidische_ ruimte wordt die afstand gegeven door de $L^2$ norm. De $L^2$ norm van een vector bekomt men door het dot product te nemen van de vector met zichzelf**:  \n",
                 "\n",
                 "\\begin{align}\n",
                 "||\\pmb{x}||_2 &= \\sqrt{\\sum_{i}x_i^2} \\\\\n",
