--- a/book/math_foundations/linalg/inverse.ipynb
+++ b/book/math_foundations/linalg/inverse.ipynb
@@ -9,9 +9,13 @@
                 "\n",
                 "Matrix inversie is een sleutel tot belangrijke mogelijkheden in Machine Learning. In de vorige sectie zagen we de **identiteitsmatrix** als speciale matrix.\n",
                 "Deze spelen een centrale rol in de formele definitie van de **matrix inverse** $\\pmb{A}^{-1}$ van een matrix $\\pmb{A}$:\n",
+                "\n",
                 "$$\n",
                 "\\pmb{A}^{-1}\\pmb{A} = \\pmb{I}_n\n",
-                "$$"
+                "$$\n",
+                "\n",
+                "(target-matrix-inverse)=\n",
+                "**De matrix inverse $\\pmb{A}^{-1}$ is de matrix die bij vermenigvuldiging met \\pmb{A} de identiteitsmatrix \\pmb{I}_n oplevert**."
             ]
         },
         {
@@ -20,7 +24,7 @@
             "metadata": {},
             "source": [
                 "## Stelsels van lineaire vergelijkingen\n",
-                "We kunnen matrix inverses gebruiken om oplossingen te vinden voor zogenaamde **stelsels van lineaire vergelijkingen**. De algemene vorm van een lineaire vergelijking is:\n",
+                "We kunnen matrix inverses gebruiken om oplossingen te vinden voor zogenaamde _stelsels van lineaire vergelijkingen_. De algemene vorm van een lineaire vergelijking is:\n",
                 "$$\n",
                 "y = \\beta_1x_1 + \\beta_2x_2 + \\ldots + \\beta_nx_n\n",
                 "$$\n",
