--- a/book/math_foundations/linalg/special_tensors.ipynb
+++ b/book/math_foundations/linalg/special_tensors.ipynb
@@ -13,6 +13,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
+                "(target-square-matrix)=\n",
                 "## Vierkante matrix\n",
                 "Een **vierkante matrix** is een matrix met evenveel rijen als kolommen. **Een matrix $\\pmb{V}_{m \\times n}$ is vierkant als en slechts als $m = n$**.\n",
                 "Geometrisch gezien, doen ze dienst als transformatoren van vectoren, meer bepaald om die te schalen, reflecteren en/of te roteren. Welke transformatie precies gebeurt, kan afgeleid worden van de zogenaamde _determinant_.\n",
@@ -177,8 +178,8 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
+                "(target-diagonal-matrix)=\n",
                 "## Diagonale Matrix\n",
-                "\n",
                 "Een **diagonale matrix** heeft niet-nul elementen alleen op de hoofddiagonaal. Alle _off_-diagonale elementen zijn nul. **Een matrix $\\pmb{D}$ is diagonaal als en slechts als $D_{i,j} = 0$ voor alle $i \\neq j$**.\n",
                 "$$\n",
                 "\\pmb{D}_{m \\times n} = \\begin{bmatrix}\n",
@@ -234,8 +235,8 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
+                "(target-identity-matrix)=\n",
                 "## Identiteitsmatrix\n",
-                "\n",
                 "Een **identiteitsmatrix is een _vierkante_ _diagonaal_ matrix met enkel de waarde $1$ op de hoofddiagonaal**.\n",
                 "$$\n",
                 "\\pmb{I}_n = \\begin{bmatrix}\n",
@@ -275,8 +276,8 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
+                "(target-symmetric-matrix)=\n",
                 "## Symmetrische Matrix\n",
-                "\n",
                 "Een **symmetrische matrix is gelijk aan zijn transpose**:\n",
                 "$$\n",
                 "\\pmb{A} = \\pmb{A}^T\n",
@@ -317,8 +318,8 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
+                "(target-upper-triangular-matrix)=\n",
                 "## _Upper triangular_ matrix\n",
-                "\n",
                 "Een **_upper triangular_ matrix** is een vierkante matrix met alle elementen onder de hoofddiagonaal gelijk aan nul. **Een matrix $\\pmb{U}^{m \\times n}$ is een _upper triangular_ matrix als en slechts als $m = n$ en $U_{i,j} = 0$ voor alle $i < j$**\n",
                 "$$\n",
                 "\\pmb{U}_n = \\begin{bmatrix}\n",
@@ -366,8 +367,8 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
+                "(target-lower-triangular-matrix)=\n",
                 "## _Lower triangular_ matrix\n",
-                "\n",
                 "Een **_lower triangular_ matrix** is een vierkante matrix met alle elementen boven de hoofddiagonaal gelijk aan nul. **Een matrix $\\pmb{L}^{m \\times n}$ is een _lower triangular_ matrix als en slechts als $m = n$ en $L_{i,j} = 0$ voor alle $i > j$**\n",
                 "$$\n",
                 "\\pmb{L}_n = \\begin{bmatrix}\n",
@@ -415,8 +416,7 @@
             "metadata": {},
             "source": [
                 "## Orthogonale matrix\n",
-                "\n",
-                "Een **orthogonale of orthonormale matrix** is een vierkante matrix waarbij de rijen en kolommen orthonomale vectoren zijn. Dit impliceert dat:\n",
+                "Een orthogonale of orthonormale matrix is een vierkante matrix waarbij de rijen en kolommen orthonomale vectoren zijn. Dit impliceert dat:\n",
                 "$$\n",
                 "\\pmb{Q}^T\\pmb{Q} = \\pmb{Q}\\pmb{Q}^T = \\pmb{I}\n",
                 "$$\n",
