--- a/book/math_foundations/linalg/why_tensors.ipynb
+++ b/book/math_foundations/linalg/why_tensors.ipynb
@@ -547,29 +547,40 @@
             "source": [
                 "### Data translatie, schaling, reflectie en rotatie\n",
                 "We zullen zien dat er veel toepassingen zijn waar data op een bepaald moment getransformeerd worden via **translatie**, **schaling**, **reflectie** en/of **rotatie**. Dit is zeer transparant en efficient in computationele zin als we data uitdrukken als tensors:\n",
-                "(target-translation)=\n",
+                "\n",
+                "(target-geo-translation)=\n",
                 "- **Translatie**: De data wordt uitgedrukt (of gekwantificeerd) ten opzichte van een ander nulpunt in de ruimte. We kunnen anderzijds ook zeggen dat de data wordt **_verschoven_** in de ruimte. In het geval van een input matrix met $m$ data punten in $n$ dimensies krijgen we:\n",
+                "\n",
                 "$$\n",
                 "\\pmb{X}' = (\\pmb{X}^T + \\pmb{c})^T \n",
                 "$$\n",
+                "\n",
                 "met $\\pmb{X}^{m \\times n}$ en $\\pmb{c}^n$\n",
+                "\n",
                 "(target-scaling)=\n",
                 "- **Schaling**: De data worden uitgedrukt ten opzichte van een andere schaal op één of meerdere assen in de ruimte (of: de data wordt **_uitgerokken_**).\n",
+                "\n",
                 "$$\n",
                 "\\pmb{X}' = (\\pmb{X}^T*\\pmb{s})^T \n",
                 "$$\n",
+                "\n",
                 "(target-reflection)=\n",
                 "- **Reflectie**[^reflection]: De data wordt gespiegeld ten opzichte van één of meerdere assen in de ruimte.\n",
+                "\n",
                 "$$\n",
                 "\\pmb{X}' = (\\pmb{X}^T*\\pmb{r})^T \n",
                 "$$\n",
+                "\n",
                 "met $\\pmb{r} \\isin \\{-1, 1\\}$\n",
                 "[^reflection]: Merk op dat reflectie een speciaal geval is van schaling\n",
+                "\n",
                 "(target-rotation)=\n",
                 "- **Rotatie**: De data worden uitgedrukt ten opzichte van een ander orthogonaal assenstelsel in de ruimte, met dezelfde oorsprong.\n",
+                "\n",
                 "$$\n",
                 "\\pmb{X}' = \\pmb{X}*\\pmb{R}\n",
                 "$$\n",
+                "\n",
                 "met $\\pmb{R}$ een $n \\times n$ orthogonale rotatie-matrix"
             ]
         },
