--- a/book/math_foundations/linear_regression/glm.ipynb
+++ b/book/math_foundations/linear_regression/glm.ipynb
@@ -9,9 +9,10 @@
     "\n",
     "Stel dat we te maken hebben met een target variabele die in plaats van een continue waarde (bv. hoeveelheid fooi), _binair_ is (bv. laat iemand een tip achter $[1]$ of niet $[1]$). In een dergelijke situatie zouden we nog steeds predicties willen kunnen maken op basis van een lineaire combinatie van features/predictoren, maar we kunnen een standaard lineair regressie model niet zomaar toepassen. Dat model houdt enkel rekening met continue targetvariabele, dus met predicties die groter dan $1$ of kleiner dan $0$. Een oplossing hiervoor is om het lineaire model via een speciale niet-lineaire functie te _linken_ aan de target waarden ($0$ of $1$ in het binaire geval). Om predicties te mappen op binaire outputs wordt een _sigmoid_ (S-vormige) functie gebruikt zoals de logistische functie. In dit laatste geval spreken we over **logistische regressie**. In het algemene geval waarbij we lineaire predicties mappen op niet-continue targetvariabelen via een welbepaalde link-functie spreekt men van _generalized linear models_ (GLM). Hier gaan we enkel verder in op _logistische regressie_ omdat het een aanzet geeft naar de parameter schattingen bij neurale netwerken.\n",
     "\n",
+    "(target-logistic-regression)=\n",
     "## Logistische regressie\n",
     "\n",
-    "Bij logistische regressie hebben te maken met binaire target variabelen:\n",
+    "Bij logistische regressie hebben te maken met **binaire target variabelen**:\n",
     "\n",
     "$$\n",
     "y_i \\isin [0, 1]\n",
@@ -333,6 +334,7 @@
    "metadata": {},
    "source": [
     "### Log loss\n",
+    "(target-binary-cross-entropy-loss)=\n",
     "Ook hier willen we optimale waarden $\\pmb{b}$ vinden, maar om die optimaliteit te bepalen maken we _geen_ gebruik van de _SSE loss_ functie omdat die in deze context in een heel onregelmatig () patroon kan resulteren met veel lokale minima - wat nefast is, zeker als we gradient descent willen toepassen. In plaats daarvan werken we met de **_binary cross-entropy loss_** functie (ook wel **log loss** genoemd).\n",
     "\n",
     "#### Definitie\n",
