--- a/book/math_foundations/linear_regression/grid.ipynb
+++ b/book/math_foundations/linear_regression/grid.ipynb
@@ -5,8 +5,8 @@
             "id": "185ec471",
             "metadata": {},
             "source": [
-                "(introduction-target)=\n",
                 "# Introductie\n",
+                "(target-linear-regression)=\n",
                 "**Lineaire regressie** is een centraal **model** binnen Machine Learning. Om de wiskunde van ML te begrijpen is het een absolute _must_ om dit model - en vooral ook de geassocieerde leeralgoritmes - ten volle te doorgronden. Het model komt uit de statistiek en veronderstelt dat **bepaalde target data (\"_responsvariabele(n)_\" genoemd in de statistiek) in lineair verband staan met één of meerdere features (ook wel \"_predictoren_\" genoemd in de de statistiek**).  \n",
                 "  \n",
                 "(target-coffee-simulation)=\n",
@@ -17,7 +17,7 @@
                 "$$\n",
                 "waarbij $y$ de grootte van de fooi is, $b_1$ een basis fooi en $b_2$ een multiplicatie factor voor de prijs van de aankoop.  \n",
                 "Het _probleem_ dat we willen oplossen is het achterhalen van $b_1$ en $b_2$.  \n",
-                "We verzamelen daarvoor data van 50 aankopen en houden er rekening mee dat er een meetfout zal zijn: de lineaire relatie zal niet altijd perfect zijn.  \n",
+                "We verzamelen daarvoor data van $50$ aankopen en houden er rekening mee dat er een meetfout zal zijn: de lineaire relatie zal niet altijd perfect zijn.  \n",
                 "Ons model voor de data is het volgende:\n",
                 "\n",
                 "$$\n",
@@ -34,7 +34,7 @@
                 "1 & x_1 \\cr\n",
                 "1 & x_2 \\cr\n",
                 "\\vdots & \\vdots \\cr\n",
-                "1 & x_n \\cr\n",
+                "1 & x_{50} \\cr\n",
                 "\\end{bmatrix}\n",
                 "$$\n",
                 "\n",
@@ -84,8 +84,8 @@
                 "  \n",
                 "(naming-target)=\n",
                 ":::{note} $b_1$, $b_2$ benamingen\n",
-                "In de geometrische voorstelling van lineaire regressie wordt $b_1$ ook het ($y$) **_intercept_** genoemd aangezien het verwijst naar het snijpunt van de rechte met de $y$-as (coördinaat $(0, b_1)$). De parameter $b_2$ wordt de **_slope_** genoemd omdat die de richtingscoëfficient van de rechte uitdrukt.  \n",
-                "In machine learning wordt $b_1$ ook als **_bias_** benoemd.\n",
+                "In de geometrische voorstelling van lineaire regressie wordt $b_1$ ook het ($y$) _intercept_ genoemd aangezien het verwijst naar het snijpunt van de rechte met de $y$-as (coördinaat $(0, b_1)$). De parameter $b_2$ wordt de _slope_ genoemd omdat die de richtingscoëfficiënt van de rechte uitdrukt.  \n",
+                "In machine learning wordt $b_1$ ook als _bias_ benoemd.\n",
                 ":::\n",
                 "  \n",
                 "Voor de grootte van de orders $\\pmb{x}$ te simuleren, trekken we 50 samples uit een _uniforme verdeling_[^prob] met de volgende parameters.\n",
@@ -298,6 +298,7 @@
                 "\\end{align}\n",
                 "$$\n",
                 "\n",
+                "(target-sse)=\n",
                 "Terugkijkend naar de definitie van de Euclidische norm ($L^2$; $||\\pmb{a}||_2 = \\sqrt{\\pmb{a}^T\\pmb{a}}$), volgt dat de $SSE$ _loss_ overeenkomt met het _kwadraat_ van de $L^2$ norm van de vector van verschillen $\\pmb{d}$ tussen geobserveerde waarden $\\pmb{y}$ en geschatte waarden $\\hat{\\pmb{y}}$. \n",
                 ":::\n",
                 "\n",
@@ -1441,12 +1442,14 @@
             "metadata": {},
             "source": [
                 ":::{important} Standaardisatie\n",
+                "(target-standard-deviation)=\n",
                 "De inspectie van het oppervlak is gevoelig aan de schaal van de variabelen. Het is algemeen (ook om wiskundige redenen) beter om onze variabelen te herschalen zodat hun gemiddelde $0$ is en hun **standaardafwijking** gelijk aan $1$. De **standaardafwijking is een belangrijke maat van spreiding rond het gemiddelde**. **Ze wordt berekend als de vierkantswortel van het gemiddelde van de gekwadrateerde verschillen ten opzicht van het gemiddelde**:\n",
                 "\n",
                 "$$\n",
                 "STD(\\pmb{x}) = sd_x = \\sqrt{\\frac{\\sum_{i=1}^M(x_i-\\overline{\\pmb{x}})^2}{M}}\n",
                 "$$\n",
                 "\n",
+                "(target-standardization)=\n",
                 "Een een standaard-schaling of **_standaardisatie_ houdt in dat we een variabele of verzameling van metingen (1) _centreren_ zodat het gemiddelde** $0$ **wordt en (2) _schalen_ zodat de standaardafwijking** $1$ **wordt**:\n",
                 "\n",
                 "$$\n",
@@ -3477,7 +3480,8 @@
             "metadata": {},
             "source": [
                 "## _Grid parameter search_\n",
-                "In de visualisatie is het coördinaat waar de $SSE$ het kleinst is in het groen aangeduid. Zeker in de geschaalde versie kan je zien dat de $SSE$ langs alle zijden van dit punt oploopt. Er is **één absoluut minimum en geen _lokale minima_**. Een oppervlak met dergelijke eigenschappen wordt een _convexe_ oppervlakte genoemd. Het minimum komt hier overeen met $b_1 = 0.615$ en $b_2 = 0.138$. Dit ligt in de buurt van onze simulatie parameters ($b_1 = 0.50$, $b_2 = 0.15$). De enige afwijking is te wijten aan onze keuze van _spacing_ in het _grid_. Deze _brute force_ **methode om aan de hand van een $N$-D _parameter grid_ het minimum van de _loss_ functie te zoeken** is op zich een leeralgoritme en wordt **grid search** genoemd.  \n",
+                "(target-grid-search)=\n",
+                "In de visualisatie is het coördinaat waar de $SSE$ het kleinst is in het groen aangeduid. Zeker in de geschaalde versie kan je zien dat de $SSE$ langs alle zijden van dit punt oploopt. Er is één absoluut minimum en geen _lokale minima_. Een oppervlak met dergelijke eigenschappen wordt een _convexe_ oppervlakte genoemd. Het minimum komt hier overeen met $b_1 = 0.615$ en $b_2 = 0.138$. Dit ligt in de buurt van onze simulatie parameters ($b_1 = 0.50$, $b_2 = 0.15$). De enige afwijking is te wijten aan onze keuze van _spacing_ in het _grid_. Deze _brute force_ **methode om aan de hand van een $N$-D _parameter grid_ het minimum van de _loss_ functie te zoeken** is op zich een leeralgoritme en wordt **grid search** genoemd.  \n",
                 "### Voordeel\n",
                 "Geen complexe wiskunde nodig.\n",
                 "### Nadeel\n",
