--- a/book/math_foundations/linear_regression/ols.ipynb
+++ b/book/math_foundations/linear_regression/ols.ipynb
@@ -175,6 +175,7 @@
                 "\n",
                 "$\\pmb{X}^T\\pmb{X}$ is niet inverteerbaar (**\"singulier\"**) bij:\n",
                 "\n",
+                "(target-multicollinearity)=\n",
                 "- Perfecte **_multicollineariteit_**: Wanneer twee of meerdere features perfecte lineaire combinaties van elkaar zijn (of identiek aan elkaar).\n",
                 "- Meer features dan observaties: Bij $M < N$ in $X$, is $\\pmb{X}^T\\pmb{X}$ gegarandeerd singulier. De matrix $\\pmb{X}^T\\pmb{X}$ zal $N \\times N$ zijn maar een rang hebben van maximaal $M < N$.  \n",
                 "  \n",
