--- a/book/math_foundations/linear_regression/gradient.ipynb
+++ b/book/math_foundations/linear_regression/gradient.ipynb
@@ -60,6 +60,7 @@
    "id": "f80e14de",
    "metadata": {},
    "source": [
+    "(target-derivative)=\n",
     "Bij de Monte Carlo sampling leveren we ons over aan het _willekeurig aftasten_ van de $SSE$ functie. We zochten steeds naar een richting in de ruimte waarin we een _stapje naar beneden_ konden zetten. Het is echter wiskundig perfect mogelijk om op ieder punt te bepalen in welke richting de daling het grootst zal zijn. Dit brengt ons bij het concept van een **_raak- of tangentlijn_ op een bepaald punt van een functie waarvan de richtingscoëfficient (of _slope_) de \"_afgeleide_\" van die functie in dat punt wordt genoemd**. De raak-/tangentlijn van een functie $f$ in het punt $x$ moet gezien worden als de **_lokale lineaire benadering_ van die functie in dat punt**. Het bepalen van die lokale benadering (en dus de afgeleide) heet **het differentiëren van functies**."
    ]
   },
@@ -69,7 +70,7 @@
    "metadata": {},
    "source": [
     "## Afgeleide van een kwadratische functie\n",
-    "De illustratie hierboven toont het principe van een afgeleide in het geval van een enkelvoudige **kwadratische functie**: \n",
+    "De illustratie hierboven toont het principe van een afgeleide in het geval van een enkelvoudige kwadratische functie: \n",
     "\n",
     "$$f(x) = x^2$$\n",
     "\n",
@@ -91,6 +92,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
+    "(target-tangent-line)=\n",
     "Dit geeft al een eerste idee van de richting waarin de kwadratische functie daalt. We kunnen een preciezere richting krijgen door het interval kleiner en kleiner te maken. **In het theoretisch kleinste interval ($\\lim_{\\Delta x\\to 0}$) spreken we niet meer van een snijlijn, maar een raak- of tangentlijn in een bepaald punt en niet meer van de richtingscoëfficient van die lijn, maar van de \"_afgeleide_\" van de functie in dat punt**. Als we in het bovenstaande geval $\\Delta x$ op $0$ zetten, krijgen we:\n",
     "\n",
     "$$\n",
@@ -194,6 +196,7 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
+    "(target-partial-derivative)=\n",
     "De elementen $\\frac{\\partial SSE}{\\partial b_1}$ en $\\frac{\\partial SSE}{\\partial b_2}$ worden de **partiële afgeleiden** van de $SSE$ functie genoemd. Samen vormen ze de **gradiënt** van de $SSE$ functie $\\nabla{SSE}$. **De gradiënt verbreedt met andere woorden het concept van de _afgeleide_ naar het geval van meerdere onbekenden.**\n",
     "\n",
     "Om een ideale oplossing voor $[b_1, b_2]^T$ te vinden, kunnen we dus de $SSE$ gradiënt gelijk stellen aan $\\pmb{0}$:\n",
@@ -485,7 +488,7 @@
    "id": "73325a1e",
    "metadata": {},
    "source": [
-    "(ols-target)=\n",
+    "(target-gradient)=\n",
     "## Gradiënt van de $SSE$ met $\\pmb{b} = [b_1, b_2, ...]^T$\n",
     "\n",
     "In het algemene geval van een $SSE$ met $N$ lineaire predictoren hebben we te maken met een $N$-dimensioneel $SSE$ _hypersurface_. Voor de gradiënt krijgen we:\n",
@@ -540,6 +543,7 @@
     "$$\n",
     "\n",
     ":::{important}\n",
+    "(target-ols)=\n",
     "We kunnen _in theorie_ via de inverse $(\\pmb{X}^T\\pmb{X})^{-1}$ en matrix multiplicatie de zogenaamde **_ordinary least squares_** (_OLS_) oplossing voor $\\hat{\\pmb{b}}$ uitrekenen. Deze oplossing is puur analytisch; we bekwamen ze louter door te redeneren over de gradiënt van de _loss_ functie. Ze is niet iteratief en wordt ook soms de _closed form_ oplossing voor het lineaire regressiemodel genoemd.\n",
     ":::\n"
    ]
