--- a/book/math_foundations/linear_regression/gradient_descent.ipynb
+++ b/book/math_foundations/linear_regression/gradient_descent.ipynb
@@ -4,6 +4,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
+                "(target-gradient-descent)=\n",
                 "# _Gradient descent_\n",
                 "\n",
                 "We zagen tot nu toe dat we parameters van een lineair regressiemodel kunnen schatten via:\n",
@@ -30,6 +31,7 @@
                 "$$\n",
                 ":::\n",
                 "\n",
+                "(target-learning-rate)=\n",
                 "Bij _gradient descent_ is het basisidee dat we, zoals bij de Monte Carlo benadering, iteratief parameterwaarden aanpassen in de richting waarin de _loss_ daalt. Alleen laten we dit nu niet afhangen van een random zoektocht, maar gebruiken we de gradiënt om ons te leiden. We beginnen met een initiële schatting $\\pmb{b}_0$. Daarna gaan we die schatting iteratief updaten met de volgende regel:\n",
                 "\n",
                 "$$\n",
@@ -3897,6 +3899,7 @@
                 "- Het algoritme kan vast komen te zitten in **lokale minima**.\n",
                 "\n",
                 "### Lokale minima\n",
+                "(target-local-minima)=\n",
                 "Bij complexere modellen bestaat het risico op _hyper loss surfaces_ die locaties bevatten waar de gradiënt $0$ is, met rondom hogere _loss_ waarden, maar waar die **locaties niet overeenkomen met het echte minimum van de _loss_ functie**. Het gradient descent algoritme kan hierin terechtkomen en zijn stop-condities bereiken zonder te weten dat het zich in een lokaal minimum bevindt."
             ]
         },
@@ -4819,7 +4822,7 @@
                 "- **Stochastische _gradient descent_**\n",
                 "\n",
                 "## Stochastische _gradient descent_\n",
-                "\n",
+                "(target-stochastic-gradient-descent)=\n",
                 "Bij **stochastische _gradient descent_** (SGD) passen we de _gradient descent_ methode aan door **niet de volledige dataset te gebruiken bij elke iteratie, maar slechts een sample** (soms zelfs slechts één observatie). Dit betekent dat we de gradiënt niet berekenen op basis van alle data punten, maar op basis van een (kleine) willekeurig gekozen subset.\n",
                 "\n",
                 "De update regel wordt dan:\n",
