--- a/book/math_foundations/linalg/dot_prod.ipynb
+++ b/book/math_foundations/linalg/dot_prod.ipynb
@@ -372,7 +372,7 @@
             "source": [
                 "### Toepassingen\n",
                 "#### Lineaire gewichten\n",
-                "Zowel bij lineaire regressie als bij simpele neurale netwerken zoals _perceptrons_ [](https://doi.org/10.1037%2Fh0042519), worden input features vertaald naar model outputs door gewogen sommen te nemen.\n",
+                "Zowel bij lineaire regressie als bij simpele neurale netwerken zoals _{ref}`perceptrons <target-perceptron>`_ [](https://doi.org/10.1037%2Fh0042519), worden input features vertaald naar model outputs door gewogen sommen te nemen.\n",
                 "Deze operatie komt neer op het dot product tussen de input vector $\\pmb{x}$ en een vector van gewichten $\\pmb{w}$: $\\pmb{w}^T\\pmb{x}$.\n",
                 "\n",
                 ":::{note} Perceptron\n",
