--- a/book/math_foundations/linear_regression/glm.ipynb
+++ b/book/math_foundations/linear_regression/glm.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "source": [
     "# _Generalized linear models_\n",
-    "\n",
-    "Stel dat we te maken hebben met een target variabele die in plaats van een continue waarde (bv. hoeveelheid fooi), _binair_ is (bv. laat iemand een tip achter $[1]$ of niet $[1]$). In een dergelijke situatie zouden we nog steeds predicties willen kunnen maken op basis van een lineaire combinatie van features/predictoren, maar we kunnen een standaard lineair regressie model niet zomaar toepassen. Dat model houdt enkel rekening met continue targetvariabele, dus met predicties die groter dan $1$ of kleiner dan $0$. Een oplossing hiervoor is om het lineaire model via een speciale niet-lineaire functie te _linken_ aan de target waarden ($0$ of $1$ in het binaire geval). Om predicties te mappen op binaire outputs wordt een _sigmoid_ (S-vormige) functie gebruikt zoals de logistische functie. In dit laatste geval spreken we over **logistische regressie**. In het algemene geval waarbij we lineaire predicties mappen op niet-continue targetvariabelen via een welbepaalde link-functie spreekt men van _generalized linear models_ (GLM). Hier gaan we enkel verder in op _logistische regressie_ omdat het een aanzet geeft naar de parameter schattingen bij neurale netwerken.\n",
+    "(target-glm)=\n",
+    "Stel dat we te maken hebben met een target variabele die in plaats van een continue waarde (bv. hoeveelheid fooi), _binair_ is (bv. laat iemand een tip achter $[1]$ of niet $[1]$). In een dergelijke situatie zouden we nog steeds predicties willen kunnen maken op basis van een lineaire combinatie van features/predictoren, maar we kunnen een standaard lineair regressie model niet zomaar toepassen. Dat model houdt enkel rekening met continue targetvariabele, dus met predicties die groter dan $1$ of kleiner dan $0$. Een oplossing hiervoor is om het lineaire model via een speciale niet-lineaire functie te _linken_ aan de target waarden ($0$ of $1$ in het binaire geval). Om predicties te mappen op binaire outputs wordt een _sigmoid_ (S-vormige) functie gebruikt zoals de logistische functie. In dit laatste geval spreken we over **logistische regressie**. In het algemene geval waarbij we **lineaire predicties mappen op niet-continue targetvariabelen via een welbepaalde link-functie spreekt men van _generalized linear models_ (GLM)**. Hier gaan we enkel verder in op _logistische regressie_ omdat het een aanzet geeft naar de parameter schattingen bij neurale netwerken.\n",
     "\n",
     "(target-logistic-regression)=\n",
     "## Logistische regressie\n",
@@ -163,6 +163,7 @@
     "\\end{cases}\n",
     "$$\n",
     "\n",
+    "(target-bin-sim)=\n",
     "### Data simulatie \n",
     "We kunnen terugkijken naar de koffiehuis data simulatie met het volume van de bestelling als de predictor, maar in plaats van de hoeveelheid fooi voorspellen we of er al dan niet een fooi werd achtergelaten."
    ]
