--- a/book/math_foundations/linear_regression/glm.ipynb
+++ b/book/math_foundations/linear_regression/glm.ipynb
@@ -343,7 +343,7 @@
     "Voor een binair classificatieprobleem wordt de cross-entropy loss voor een enkel datapunt gedefinieerd als:\n",
     "\n",
     "$$\n",
-    "L(\\hat{y}_i, y_i) = -\\left[ y_i \\log(\\hat{y}_i) + (1 - y_i) \\log(1 - \\hat{y}_i) \\right]\n",
+    "\\mathcal{L}(\\hat{y}_i, y_i) = -\\left[ y_i \\log(\\hat{y}_i) + (1 - y_i) \\log(1 - \\hat{y}_i) \\right]\n",
     "$$\n",
     "\n",
     "waarbij:\n",
@@ -353,7 +353,7 @@
     "Voor de volledige dataset met $n$ observaties is de totale **binary cross-entropy (BCE) loss**:\n",
     "\n",
     "$$\n",
-    "\\text{BCE}(\\pmb{b}) = -\\frac{1}{n} \\sum_{i=1}^{n} \\left[ y_i \\log(\\hat{y}_i) + (1 - y_i) \\log(1 - \\hat{y}_i) \\right]\n",
+    "\\mathcal{L}_{BCE}(\\pmb{b}) = -\\frac{1}{n} \\sum_{i=1}^{n} \\left[ y_i \\log(\\hat{y}_i) + (1 - y_i) \\log(1 - \\hat{y}_i) \\right]\n",
     "$$\n",
     "\n",
     "De belangrijkste eigenschappen zijn:\n",
@@ -628,13 +628,13 @@
     "Voor de binary cross-entropy loss:\n",
     "\n",
     "$$\n",
-    "\\text{BCE}(\\pmb{b}) = -\\frac{1}{n} \\sum_{i=1}^{n} \\left[ y_i \\log(\\hat{y}_i) + (1 - y_i) \\log(1 - \\hat{y}_i) \\right]\n",
+    "\\mathcal{L}_{BCE}(\\pmb{b}) = -\\frac{1}{n} \\sum_{i=1}^{n} \\left[ y_i \\log(\\hat{y}_i) + (1 - y_i) \\log(1 - \\hat{y}_i) \\right]\n",
     "$$\n",
     "\n",
     "is de gradiënt ten opzichte van de parameters $\\pmb{b}$:\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial \\text{BCE}}{\\partial \\pmb{b}} = \\nabla BCE = \\frac{1}{n} \\pmb{X}^T(\\pmb{\\hat{y}} - \\pmb{y})\n",
+    "\\frac{\\partial \\mathcal{L}_{BCE}}{\\partial \\pmb{b}} = \\nabla \\mathcal{L}_{BCE} = \\frac{1}{n} \\pmb{X}^T(\\pmb{\\hat{y}} - \\pmb{y})\n",
     "$$\n",
     "\n",
     "waarbij\n",
@@ -647,7 +647,7 @@
     "Merk op dat we hier met een eenvoudige formule eindigen die sterk lijkt op de SSE loss die we in de vorige secties gebruikten:\n",
     "\n",
     "$$\n",
-    "\\nabla{SSE} = -2\\pmb{X}^T(\\pmb{y} - \\pmb{\\hat{y}})\n",
+    "\\nabla{\\mathcal{L}_{SSE}} = -2\\pmb{X}^T(\\pmb{y} - \\pmb{\\hat{y}})\n",
     "$$\n",
     ":::"
    ]
@@ -710,22 +710,22 @@
     "Voor een enkel datapunt is de loss:\n",
     "\n",
     "$$\n",
-    "L = -[y \\log(\\hat{y}) + (1 - y) \\log(1 - \\hat{y})]\n",
+    "\\mathcal{L} = -[y \\log(\\hat{y}) + (1 - y) \\log(1 - \\hat{y})]\n",
     "$$\n",
     "\n",
     "waarbij $\\hat{y} = \\sigma(z)$ en $z = \\pmb{x}^T\\pmb{b}$.\n",
     "\n",
-    "We willen $\\frac{\\partial L}{\\partial b_j}$ berekenen. Met de kettingregel:\n",
+    "We willen $\\frac{\\partial \\mathcal{L}}{\\partial b_j}$ berekenen. Met de kettingregel:\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial L}{\\partial b_j} = \\frac{\\partial L}{\\partial \\hat{y}} \\cdot \\frac{\\partial \\hat{y}}{\\partial z} \\cdot \\frac{\\partial z}{\\partial b_j}\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_j} = \\frac{\\partial \\mathcal{L}}{\\partial \\hat{y}} \\cdot \\frac{\\partial \\hat{y}}{\\partial z} \\cdot \\frac{\\partial z}{\\partial b_j}\n",
     "$$\n",
     "\n",
-    "**Stap 1:** Bereken $\\frac{\\partial L}{\\partial \\hat{y}}$:\n",
+    "**Stap 1:** Bereken $\\frac{\\partial \\mathcal{L}}{\\partial \\hat{y}}$:\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\frac{\\partial L}{\\partial \\hat{y}} &= -\\left[\\frac{y}{\\hat{y}} + (1-y) \\cdot \\frac{-1}{1-\\hat{y}}\\right] \\cr\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial \\hat{y}} &= -\\left[\\frac{y}{\\hat{y}} + (1-y) \\cdot \\frac{-1}{1-\\hat{y}}\\right] \\cr\n",
     "&= -\\left[\\frac{y}{\\hat{y}} - \\frac{1-y}{1-\\hat{y}}\\right] \\cr\n",
     "&= -\\frac{y(1-\\hat{y}) - (1-y)\\hat{y}}{\\hat{y}(1-\\hat{y})} \\cr\n",
     "&= -\\frac{y - y\\hat{y} - \\hat{y} + y\\hat{y}}{\\hat{y}(1-\\hat{y})} \\cr\n",
@@ -745,7 +745,7 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\frac{\\partial L}{\\partial b_j} &= -\\frac{y - \\hat{y}}{\\hat{y}(1-\\hat{y})} \\cdot \\hat{y}(1-\\hat{y}) \\cdot x_j \\cr\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_j} &= -\\frac{y - \\hat{y}}{\\hat{y}(1-\\hat{y})} \\cdot \\hat{y}(1-\\hat{y}) \\cdot x_j \\cr\n",
     "&= -(y - \\hat{y}) \\cdot x_j \\cr\n",
     "&= (\\hat{y} - y) \\cdot x_j\n",
     "\\end{align}\n",
@@ -754,13 +754,13 @@
     "Voor de volledige dataset met $n$ observaties:\n",
     "\n",
     "$$\n",
-    "\\nabla BCE = \\frac{1}{n} \\sum_{i=1}^{n} (\\hat{y}_i - y_i) x_{ij}\n",
+    "\\nabla \\mathcal{L}_{BCE} = \\frac{1}{n} \\sum_{i=1}^{n} (\\hat{y}_i - y_i) x_{ij}\n",
     "$$\n",
     "\n",
     "In vectorvorm krijgen we de gradiënt:\n",
     "\n",
     "$$\n",
-    "\\nabla BCE = \\frac{1}{n} \\pmb{X}^T(\\pmb{\\hat{y}} - \\pmb{y})\n",
+    "\\nabla \\mathcal{L}_{BCE} = \\frac{1}{n} \\pmb{X}^T(\\pmb{\\hat{y}} - \\pmb{y})\n",
     "$$\n",
     "\n",
     "Deze elegante uitdrukking is identiek aan de gradiënt voor lineaire regressie met SSE loss (op een factor na).\n",
@@ -777,8 +777,8 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\pmb{b}^{k+1} &= \\pmb{b}^k - \\lambda \\nabla J(\\pmb{b}^k) \\cr\n",
-    "&= \\pmb{b}^k - \\lambda \\nabla BCE(\\pmb{b}^k)\n",
+    "\\pmb{b}^{k+1} &= \\pmb{b}^k - \\lambda \\nabla \\mathcal{L}(\\pmb{b}^k) \\cr\n",
+    "&= \\pmb{b}^k - \\lambda \\nabla \\mathcal{L}_{BCE}(\\pmb{b}^k)\n",
     "\\end{align}\n",
     "$$"
    ]
