--- a/book/math_foundations/linear_regression/gradient.ipynb
+++ b/book/math_foundations/linear_regression/gradient.ipynb
@@ -132,7 +132,7 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "J_{SSE}(f(\\pmb{x}); \\pmb{y}) &= \\sum_{i=1}^M(y_i-f(x_i))^2 \\cr\n",
+    "\\mathcal{L}_{SSE}(f(\\pmb{x}); \\pmb{y}) &= \\sum_{i=1}^M(y_i-f(x_i))^2 \\cr\n",
     "&= \\sum_{i=1}^M(y_i-\\hat{y_i})^2 \\cr\n",
     "&= (y_1 - \\hat{y_1})^2 + (y_2 - \\hat{y_2})^2 + \\ldots + (y_m - \\hat{y_m})^2 \\cr\n",
     "&= {d_1}^2 + {d_2}^2 + \\ldots + {d_m}^2\n",
@@ -154,13 +154,13 @@
     "We krijgen dus\n",
     "\n",
     "$$\n",
-    "J_{SSE}(f(\\pmb{x}); \\pmb{y})' = 2d_1 + 2d_2 + \\ldots + 2d_m\n",
+    "\\mathcal{L}_{SSE}(f(\\pmb{x}); \\pmb{y})' = 2d_1 + 2d_2 + \\ldots + 2d_m\n",
     "$$\n",
     "\n",
     "In het geval van een model met enkel een intercept ($\\pmb{b} = [b_1]^T$) krijgen we:\n",
     "\n",
     "$$\n",
-    "J_{SSE}(f(\\pmb{x}); \\pmb{y})' = \\frac{\\partial SSE}{\\partial b_1} = 2\\sum_{i=1}^M(y_i-b_1)\n",
+    "\\mathcal{L}_{SSE}(f(\\pmb{x}); \\pmb{y})' = \\frac{\\partial SSE}{\\partial b_1} = 2\\sum_{i=1}^M(y_i-b_1)\n",
     "$$\n",
     "\n",
     "Wanneer we de ideale waarde voor $b_1$ willen vinden, kunnen we deze afgeleide gelijk stellen aan $0$ ($\\to$ horizontale tangentlijn):\n",
@@ -190,7 +190,7 @@
     "In het geval van $\\pmb{b} = [b_1, b_2]^T$ neemt de $SSE$ de vorm aan van een oppervlakte (zoals reeds geïllustreerd bij de grid search en monte carlo sampling). We drukken de afgeleide dan ook uit in twee dimensies:\n",
     "\n",
     "$$\n",
-    "J_{SSE}(f(\\pmb{x}); \\pmb{y})' = \\nabla{SSE} = \\begin{bmatrix}\n",
+    "\\mathcal{L}_{SSE}(f(\\pmb{x}); \\pmb{y})' = \\nabla{SSE} = \\begin{bmatrix}\n",
     "\\frac{\\partial SSE}{\\partial b_1} \\cr\n",
     "\\frac{\\partial SSE}{\\partial b_2}\n",
     "\\end{bmatrix}\n",
@@ -202,7 +202,7 @@
     "Om een ideale oplossing voor $[b_1, b_2]^T$ te vinden, kunnen we dus de $SSE$ gradiënt gelijk stellen aan $\\pmb{0}$:\n",
     "\n",
     "$$\n",
-    "\\nabla{SSE} = \\pmb{0} = \\begin{bmatrix}\n",
+    "\\nabla{\\mathcal{L}_{SSE}} = \\pmb{0} = \\begin{bmatrix}\n",
     "0 \\cr\n",
     "0\n",
     "\\end{bmatrix}\n",
@@ -214,7 +214,7 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\frac{\\partial SSE}{\\partial b_1} &= \\frac{\\partial}{\\partial b_1}\\begin{bmatrix}\n",
+    "\\frac{\\partial \\mathcal{L}_{SSE}}{\\partial b_1} &= \\frac{\\partial}{\\partial b_1}\\begin{bmatrix}\n",
     "\\sum_{i=1}^M(y_i - \\hat{y_i})^2\n",
     "\\end{bmatrix} \\cr\n",
     "&= \\frac{\\partial}{\\partial b_1}\\begin{bmatrix}\n",
@@ -227,7 +227,7 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\frac{\\partial SSE}{\\partial b_1} &= \n",
+    "\\frac{\\partial \\mathcal{L}_{SSE}}{\\partial b_1} &= \n",
     "\\sum_{i=1}^M\\frac{\\partial}{\\partial b_1}(y_i - b_1 - b_2x_i)^2\n",
     "\\end{aligned}\n",
     "$$\n",
@@ -242,7 +242,7 @@
     "g(h(b_1, b_2)) = h(b_1, b_2)^2 = (y_i - b_1 - b_2x_i)^2\n",
     "$$\n",
     "\n",
-    "\n",
+    "(target-chain-rule)=\n",
     "De _ketting-regel_ houdt in dat bij geneste functies $g(h(x))$, de afgeleide naar $x$ het product is van de afgeleiden, beginnend bij de buitenste functie.\n",
     "\n",
     "$$\n",
@@ -354,7 +354,7 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\frac{\\partial SSE}{\\partial b_1} &=\n",
+    "\\frac{\\partial \\mathcal{L}_{SSE}}{\\partial b_1} &=\n",
     "\\sum_{i=1}^M2(y_i - b_1 - b_2x_i)(-1) \\cr\n",
     "&=\n",
     "\\sum_{i=1}^M-2(y_i - b_1 - b_2x_i) \\cr\n",
@@ -369,11 +369,11 @@
    "id": "4c040670",
    "metadata": {},
    "source": [
-    "2. **De partiële afgeleide $\\frac{\\partial SSE}{\\partial b_2}$ vertelt ons hoe de $SSE$ verandert in functie van $b_2$, terwijl we $b_1$ constant houden**.\n",
+    "2. **De partiële afgeleide $\\frac{\\partial \\mathcal{L}_{SSE}}{\\partial b_2}$ vertelt ons hoe de $SSE$ verandert in functie van $b_2$, terwijl we $b_1$ constant houden**.\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\frac{\\partial SSE}{\\partial b_2} &= \n",
+    "\\frac{\\partial \\mathcal{L}_{SSE}}{\\partial b_2} &= \n",
     "\\sum_{i=1}^M\\frac{\\partial}{\\partial b_2}(y_i - b_1 - b_2x_i)^2\n",
     "\\end{aligned}\n",
     "$$\n",
@@ -382,7 +382,7 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\frac{\\partial SSE}{\\partial b_2} &=\n",
+    "\\frac{\\partial \\mathcal{L}_{SSE}}{\\partial b_2} &=\n",
     "\\sum_{i=1}^M2(y_i - b_1 - b_2x_i)(-x_i) \\cr\n",
     "&=\n",
     "-2\\sum_{i=1}^M(y_i - b_1 - b_2x_i)x_i\n",
@@ -464,7 +464,7 @@
     "Uiteindelijk krijgen we dus:\n",
     "\n",
     "$$\n",
-    "\\nabla{SSE} = \\begin{bmatrix}\n",
+    "\\nabla{\\mathcal{L}_{SSE}} = \\begin{bmatrix}\n",
     "-2\\sum_{i=1}^M(y_i - b_1 - b_2x_i) \\cr\n",
     "-2\\sum_{i=1}^M(y_i - b_1 - b_2x_i)x_i\n",
     "\\end{bmatrix}\n",
@@ -494,7 +494,7 @@
     "In het algemene geval van een $SSE$ met $N$ lineaire predictoren hebben we te maken met een $N$-dimensioneel $SSE$ _hypersurface_. Voor de gradiënt krijgen we:\n",
     "\n",
     "$$\n",
-    "\\nabla{SSE} = \\begin{bmatrix}\n",
+    "\\nabla{\\mathcal{L}_{SSE}} = \\begin{bmatrix}\n",
     "-2\\sum_{i=1}^M(y_i - \\sum_{j=1}^Nx_{ij}b_j)(x_{i,1}) \\cr\n",
     "-2\\sum_{i=1}^M(y_i - \\sum_{j=1}^Nx_{ij}b_j)(x_{i,2}) \\cr\n",
     "\\vdots \\cr\n",
