--- a/book/math_foundations/linear_regression/gradient_descent.ipynb
+++ b/book/math_foundations/linear_regression/gradient_descent.ipynb
@@ -16,12 +16,12 @@
                 "In deze sectie bespreken we een populair alternatief: **_gradient descent_**. Zeker in de context van complexere ML modellen (bv. neurale netwerken) biedt deze oplossing (en aanverwanten) een stabieler alternatief. Zoals de naam zelf suggereert, maakt de _gradient descent_ oplossing, net zoals OLS gebruik van de gradiënt. Het is echter net zoals bij Monte Carlo sampling een iteratief, en dus geen _closed form_, leeralgoritme.\n",
                 "\n",
                 ":::{important} Gradiënt\n",
-                "Herinner je dat de **gradiënt** in deze context de **tensor is met alle partiële afgeleiden van de _loss_ functie bij een gegeven set van parameterwaarden** $\\nabla J(\\pmb{b}^k)$. Ieder individueel element staat voor de richting van de raaklijn met de _loss_ (hyper) _surface_ voor een bepaalde parameter ($b^k_i$), in de veronderstelling dat alle andere parameters constant blijven (de partiële afgeleide: $\\frac{\\partial J(\\pmb{b}^k)}{\\partial b^k_i}$).\n",
+                "Herinner je dat de **gradiënt** in deze context de **tensor is met alle partiële afgeleiden van de _loss_ functie bij een gegeven set van parameterwaarden** $\\nabla \\mathcal{L}(\\pmb{b}^k)$. Ieder individueel element staat voor de richting van de raaklijn met de _loss_ (hyper) _surface_ voor een bepaalde parameter ($b^k_i$), in de veronderstelling dat alle andere parameters constant blijven (de partiële afgeleide: $\\frac{\\partial \\mathcal{L}(\\pmb{b}^k)}{\\partial b^k_i}$).\n",
                 "  \n",
                 "De grootte van de individuele elementen geeft aan hoe sterk de _loss_ functie toeneemt (bij een positieve waarde) of afneemt (bij een negatieve waarde) als de overeenkomstige parameterwaarde ($b^k_i$) met een bepaalde stapgrootte wordt verschoven. Let wel dat het de toe-/afname betreft volgens de lokale lineaire benadering (vandaar geen $=$ maar $\\sim$ hieronder): \n",
                 "\n",
                 "$$\n",
-                "J(b^{k+1}_i) \\sim J(b^k_i) + \\frac{\\partial J(\\pmb{b}^k)}{\\partial b^k_i} \\Delta b^{k+1}_i\n",
+                "\\mathcal{L}(b^{k+1}_i) \\sim \\mathcal{L}(b^k_i) + \\frac{\\partial \\mathcal{L}(\\pmb{b}^k)}{\\partial b^k_i} \\Delta b^{k+1}_i\n",
                 "$$\n",
                 "\n",
                 "met\n",
@@ -35,7 +35,7 @@
                 "Bij _gradient descent_ is het basisidee dat we, zoals bij de Monte Carlo benadering, iteratief parameterwaarden aanpassen in de richting waarin de _loss_ daalt. Alleen laten we dit nu niet afhangen van een random zoektocht, maar gebruiken we de gradiënt om ons te leiden. We beginnen met een initiële schatting $\\pmb{b}_0$. Daarna gaan we die schatting iteratief updaten met de volgende regel:\n",
                 "\n",
                 "$$\n",
-                "\\pmb{b}^{k+1} = \\pmb{b}^k - \\lambda \\nabla J(\\pmb{b}^k) \n",
+                "\\pmb{b}^{k+1} = \\pmb{b}^k - \\lambda \\nabla \\mathcal{L}(\\pmb{b}^k) \n",
                 "$$\n",
                 "waarbij de hyper parameter $\\lambda$ de **_learning rate_** is met $\\lambda > 0$\n",
                 "  \n",
@@ -4828,7 +4828,7 @@
                 "De update regel wordt dan:\n",
                 "\n",
                 "$$\n",
-                "\\pmb{b}^{k+1} = \\pmb{b}^k - \\lambda \\nabla J(\\pmb{b}^k, \\mathcal{B}^k)\n",
+                "\\pmb{b}^{k+1} = \\pmb{b}^k - \\lambda \\nabla \\mathcal{L}(\\pmb{b}^k, \\mathcal{B}^k)\n",
                 "$$\n",
                 "\n",
                 "waarbij $\\mathcal{B}^k$ een _mini-batch_ is: een willekeurige subset van de trainingsdata bij iteratie $k$.\n",
