--- a/book/math_foundations/linear_regression/grid.ipynb
+++ b/book/math_foundations/linear_regression/grid.ipynb
@@ -266,7 +266,7 @@
                 "Om het leeralgoritme sturen, kiezen we hier voor de **_Sum of Squared Errors ($SSE$)_** functie[^ml_principles]:\n",
                 "\n",
                 "$$\n",
-                "J_{SSE}(f(\\pmb{x}); \\pmb{y}) = \\sum_{i=1}^M(y_i-f(x_i))^2\n",
+                "\\mathcal{L}_{SSE}(f(\\pmb{x}); \\pmb{y}) = \\sum_{i=1}^M(y_i-f(x_i))^2\n",
                 "$$\n",
                 "\n",
                 "waarbij\n",
@@ -284,7 +284,7 @@
                 "\n",
                 "$$\n",
                 "\\begin{align}\n",
-                "J_{SSE}(f(\\pmb{x}); \\pmb{y}) &= \\sum_{i=1}^M(y_i-\\hat{y_i})^2 \\cr\n",
+                "\\mathcal{L}_{SSE}(f(\\pmb{x}); \\pmb{y}) &= \\sum_{i=1}^M(y_i-\\hat{y_i})^2 \\cr\n",
                 "&= \\sum_{i=1}^M(y_i-\\hat{y_i})(y_i-\\hat{y_i})\n",
                 "\\end{align}\n",
                 "$$\n",
@@ -293,7 +293,7 @@
                 "\n",
                 "$$\n",
                 "\\begin{align}\n",
-                "J_{SSE}(f(\\pmb{x}); \\pmb{y}) &= \\sum_{i=1}^Md_id_i \\cr\n",
+                "\\mathcal{L}_{SSE}(f(\\pmb{x}); \\pmb{y}) &= \\sum_{i=1}^Md_id_i \\cr\n",
                 "&= \\pmb{d}^T\\pmb{d}\n",
                 "\\end{align}\n",
                 "$$\n",
